<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Postify</string>
    <string name="signup">Registration</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share stories, vent, or express your feelings? Do it at Dicoding Story!</string>
    <string name="title_welcome_page">Welcome to Dicoding Story!</string>
    <string name="title_signup_page">Complete your information below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your information</string>
    <string name="title_login_page">Ready to share your stories?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to Dicoding Story</string>
    <string name="greeting">Hello</string>
    <string name="logout">Logout</string>
    <string name="galeri">Gallery</string>
    <string name="kamera">Camera</string>
    <string name="deskripsi">Description</string>
    <string name="upload">Upload</string>
    <string name="language">Language</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">map\n</string>

    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="empty_image_warning">Insert photo first.</string>
    <string name="result">Analyze Result</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="translate">Translate to English</string>
    <string name="downloading_model_fail">Error</string>
    <string name="scan">Scan\n</string>
</resources>
