<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">

        <item
            android:id="@+id/btnScan"
            android:icon="@drawable/baseline_photo_camera_24"
            android:title="@string/scan"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/btnMap"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/map"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/btnLanguage"
            android:icon="@drawable/baseline_language_24"
            android:title="@string/language"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/btnLogout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />

    </group>
</menu>